implementação do kisslog para funcionalidade de logs

--- a/AspNetCoreIdentity/appsettings.Production.json
+++ b/AspNetCoreIdentity/appsettings.Production.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "KissLog.OrganizationId": "a9374922-c052-4444-a509-da311f20ce27",
+  "KissLog.ApplicationId": "f1367845-963f-4a2b-93d0-d04ec5dc3ade",
+  "KissLog.ApiUrl": "https://api.kisslog.net"
 }
